--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # QSCRIPT
 
+# Warning: I'll have to completely re-write this "documentation" because everything changed. And when I say "everything", I do mean *EVERYTHING*.
+
 ## What is QScript?
 
 QScript is - like almost every other project on this account - a programming language. It is designed to be a toy language, with very high level capabilities. It provides the ability to read in files as well as usage in a terminal shell. The interpreter is written in Java, making it not the fastest one. It has a very functional style, so functional, that you can create objects using functions... well, kind of. If you are interested in using this, take a look or two at the [examples](src/examples). There you also find the standard functions, like ```sqrt``` in [math.qs](src/examples/math.qs) or ```printf``` in [io.qs](src/examples/io.qs).
